fix(indexing): ui and flow
