# packages/backend/src/database/models/document-indexing.model.ts
@@ -1,10 +1,17 @@
-import { BaseEntity, Entity, OneToMany, PrimaryGeneratedColumn } from 'typeorm';
+import { Column, Entity, OneToMany, PrimaryGeneratedColumn } from 'typeorm';
+import { BaseModel } from './base.model';
 import { FileIndexing } from './file-indexing.model';
 
 @Entity()
-export class DocumentIndexing extends BaseEntity {
+export class DocumentIndexing extends BaseModel {
   @PrimaryGeneratedColumn('uuid')
   id: string;
+
+  @Column()
+  title: string;
+
+  @Column({ default: 0 })
+  fileCount: number = 0;
 
   @OneToMany(
     () => FileIndexing,
