# packages/backend/src/modules/indexing/indexing.controller.ts
@@ -1,7 +1,11 @@
-import { Body, Controller, Get, Param, Post } from '@nestjs/common';
+import { Body, Controller, Get, Param, Post, Query } from '@nestjs/common';
 import { ApiBearerAuth, ApiResponse } from '@nestjs/swagger';
 import {
   DocumentIndexingDto,
+  GetDocumentIndexingsDto,
+  GetDocumentIndexingsResponseDto,
+  GetFileIndexingsDto,
+  GetFileIndexingsResponseDto,
   IndexDocumentResponseDto,
   IndexDocumentsDto,
 } from './indexing.dto';
@@ -22,11 +26,38 @@ export class IndexingController {
     return this.indexingService.queueIndexDocuments(dto);
   }
 
+  @Get('/')
+  @ApiResponse({ status: 200, type: GetDocumentIndexingsResponseDto })
+  public async getDocumentIndexings(
+    @Query() dto: GetDocumentIndexingsDto,
+  ): Promise<GetDocumentIndexingsResponseDto> {
+    const { documentIndexings, total } =
+      await this.indexingService.getDocumentIndexings(dto);
+    return {
+      documentIndexings: documentIndexings,
+      total: total,
+    };
+  }
+
   @Get('/:documentIndexingId')
   @ApiResponse({ status: 200, type: DocumentIndexingDto })
   public async getDocumentIndexing(
     @Param('documentIndexingId') documentIndexingId: string,
   ) {
     return this.indexingService.getDocumentIndexing(documentIndexingId);
+  }
+
+  @Get('/:documentIndexingId/files')
+  @ApiResponse({ status: 200, type: GetFileIndexingsResponseDto })
+  public async getIndexingFiles(
+    @Param('documentIndexingId') documentIndexingId: string,
+    @Query() dto: GetFileIndexingsDto,
+  ): Promise<GetFileIndexingsResponseDto> {
+    const { fileIndexings, total } =
+      await this.indexingService.getFileIndexings(documentIndexingId, dto);
+    return {
+      fileIndexings,
+      total,
+    };
   }
 }
